--- a/work/scripts/dadata.ipynb
+++ b/work/scripts/dadata.ipynb
@@ -154,6 +154,189 @@
    "source": [
     "result[0][\"data\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'value': 'ПАО СБЕРБАНК',\n",
+       "  'unrestricted_value': 'ПАО СБЕРБАНК',\n",
+       "  'data': {'kpp': '773601001',\n",
+       "   'capital': None,\n",
+       "   'invalid': None,\n",
+       "   'management': {'name': 'Греф Герман Оскарович',\n",
+       "    'post': 'ПРЕЗИДЕНТ, ПРЕДСЕДАТЕЛЬ ПРАВЛЕНИЯ',\n",
+       "    'disqualified': None},\n",
+       "   'founders': None,\n",
+       "   'managers': None,\n",
+       "   'predecessors': None,\n",
+       "   'successors': None,\n",
+       "   'branch_type': 'MAIN',\n",
+       "   'branch_count': 86,\n",
+       "   'source': None,\n",
+       "   'qc': None,\n",
+       "   'hid': '588a141bc5e17cbc976ec2d0d54149af49d5a4ca16e26ed2effafdf06841d645',\n",
+       "   'type': 'LEGAL',\n",
+       "   'state': {'status': 'ACTIVE',\n",
+       "    'code': None,\n",
+       "    'actuality_date': 1700438400000,\n",
+       "    'registration_date': 677376000000,\n",
+       "    'liquidation_date': None},\n",
+       "   'opf': {'type': '2014',\n",
+       "    'code': '12247',\n",
+       "    'full': 'Публичное акционерное общество',\n",
+       "    'short': 'ПАО'},\n",
+       "   'name': {'full_with_opf': 'ПУБЛИЧНОЕ АКЦИОНЕРНОЕ ОБЩЕСТВО \"СБЕРБАНК РОССИИ\"',\n",
+       "    'short_with_opf': 'ПАО СБЕРБАНК',\n",
+       "    'latin': None,\n",
+       "    'full': 'СБЕРБАНК РОССИИ',\n",
+       "    'short': 'СБЕРБАНК'},\n",
+       "   'inn': '7707083893',\n",
+       "   'ogrn': '1027700132195',\n",
+       "   'okpo': '00032537',\n",
+       "   'okato': '45293554000',\n",
+       "   'oktmo': '45397000000',\n",
+       "   'okogu': '4100104',\n",
+       "   'okfs': '41',\n",
+       "   'okved': '64.19',\n",
+       "   'okveds': None,\n",
+       "   'authorities': None,\n",
+       "   'documents': None,\n",
+       "   'licenses': None,\n",
+       "   'finance': None,\n",
+       "   'address': {'value': 'г Москва, ул Вавилова, д 19',\n",
+       "    'unrestricted_value': '117312, г Москва, Академический р-н, ул Вавилова, д 19',\n",
+       "    'invalidity': None,\n",
+       "    'data': {'postal_code': '117312',\n",
+       "     'country': 'Россия',\n",
+       "     'country_iso_code': 'RU',\n",
+       "     'federal_district': 'Центральный',\n",
+       "     'region_fias_id': '0c5b2444-70a0-4932-980c-b4dc0d3f02b5',\n",
+       "     'region_kladr_id': '7700000000000',\n",
+       "     'region_iso_code': 'RU-MOW',\n",
+       "     'region_with_type': 'г Москва',\n",
+       "     'region_type': 'г',\n",
+       "     'region_type_full': 'город',\n",
+       "     'region': 'Москва',\n",
+       "     'area_fias_id': None,\n",
+       "     'area_kladr_id': None,\n",
+       "     'area_with_type': None,\n",
+       "     'area_type': None,\n",
+       "     'area_type_full': None,\n",
+       "     'area': None,\n",
+       "     'city_fias_id': '0c5b2444-70a0-4932-980c-b4dc0d3f02b5',\n",
+       "     'city_kladr_id': '7700000000000',\n",
+       "     'city_with_type': 'г Москва',\n",
+       "     'city_type': 'г',\n",
+       "     'city_type_full': 'город',\n",
+       "     'city': 'Москва',\n",
+       "     'city_area': 'Юго-западный',\n",
+       "     'city_district_fias_id': None,\n",
+       "     'city_district_kladr_id': None,\n",
+       "     'city_district_with_type': 'Академический р-н',\n",
+       "     'city_district_type': 'р-н',\n",
+       "     'city_district_type_full': 'район',\n",
+       "     'city_district': 'Академический',\n",
+       "     'settlement_fias_id': None,\n",
+       "     'settlement_kladr_id': None,\n",
+       "     'settlement_with_type': None,\n",
+       "     'settlement_type': None,\n",
+       "     'settlement_type_full': None,\n",
+       "     'settlement': None,\n",
+       "     'street_fias_id': '25f8f29b-b110-40ab-a48e-9c72f5fb4331',\n",
+       "     'street_kladr_id': '77000000000092400',\n",
+       "     'street_with_type': 'ул Вавилова',\n",
+       "     'street_type': 'ул',\n",
+       "     'street_type_full': 'улица',\n",
+       "     'street': 'Вавилова',\n",
+       "     'stead_fias_id': None,\n",
+       "     'stead_cadnum': None,\n",
+       "     'stead_type': None,\n",
+       "     'stead_type_full': None,\n",
+       "     'stead': None,\n",
+       "     'house_fias_id': '93409d8c-d8d4-4491-838f-f9aa1678b5e6',\n",
+       "     'house_kladr_id': '7700000000009240170',\n",
+       "     'house_cadnum': '77:06:0002008:1036',\n",
+       "     'house_type': 'д',\n",
+       "     'house_type_full': 'дом',\n",
+       "     'house': '19',\n",
+       "     'block_type': None,\n",
+       "     'block_type_full': None,\n",
+       "     'block': None,\n",
+       "     'entrance': None,\n",
+       "     'floor': None,\n",
+       "     'flat_fias_id': None,\n",
+       "     'flat_cadnum': None,\n",
+       "     'flat_type': None,\n",
+       "     'flat_type_full': None,\n",
+       "     'flat': None,\n",
+       "     'flat_area': None,\n",
+       "     'square_meter_price': None,\n",
+       "     'flat_price': None,\n",
+       "     'room_fias_id': None,\n",
+       "     'room_cadnum': None,\n",
+       "     'room_type': None,\n",
+       "     'room_type_full': None,\n",
+       "     'room': None,\n",
+       "     'postal_box': None,\n",
+       "     'fias_id': '93409d8c-d8d4-4491-838f-f9aa1678b5e6',\n",
+       "     'fias_code': '77000000000000009240170',\n",
+       "     'fias_level': '8',\n",
+       "     'fias_actuality_state': '0',\n",
+       "     'kladr_id': '7700000000009240170',\n",
+       "     'geoname_id': '524901',\n",
+       "     'capital_marker': '0',\n",
+       "     'okato': '45293554000',\n",
+       "     'oktmo': '45397000',\n",
+       "     'tax_office': '7736',\n",
+       "     'tax_office_legal': '7736',\n",
+       "     'timezone': 'UTC+3',\n",
+       "     'geo_lat': '55.7001865',\n",
+       "     'geo_lon': '37.5802234',\n",
+       "     'beltway_hit': 'IN_MKAD',\n",
+       "     'beltway_distance': None,\n",
+       "     'metro': [{'name': 'Ленинский проспект',\n",
+       "       'line': 'Калужско-Рижская',\n",
+       "       'distance': 0.8},\n",
+       "      {'name': 'Площадь Гагарина', 'line': 'МЦК', 'distance': 0.8},\n",
+       "      {'name': 'Академическая', 'line': 'Калужско-Рижская', 'distance': 1.5}],\n",
+       "     'divisions': None,\n",
+       "     'qc_geo': '0',\n",
+       "     'qc_complete': None,\n",
+       "     'qc_house': None,\n",
+       "     'history_values': None,\n",
+       "     'unparsed_parts': None,\n",
+       "     'source': '117312, Г.Москва, УЛ. ВАВИЛОВА, Д.19',\n",
+       "     'qc': '0'}},\n",
+       "   'phones': None,\n",
+       "   'emails': None,\n",
+       "   'ogrn_date': 1029456000000,\n",
+       "   'okved_type': '2014',\n",
+       "   'employee_count': None}}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# https://github.com/hflabs/dadata-py\n",
+    "\n",
+    "from dadata import Dadata\n",
+    "\n",
+    "token = \"edf41a5fb5c5986b34e54bc3dd0200acb59fc674\"\n",
+    "dadata = Dadata(token)\n",
+    "result = dadata.find_by_id(\"party\",\n",
+    "                           \"7707083893\",\n",
+    "                           branch_type = \"MAIN\",\n",
+    "                        )\n",
+    "result"
+   ]
   }
  ],
  "metadata": {
