--- a/work/scripts/dadata.ipynb
+++ b/work/scripts/dadata.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,27 +49,92 @@
     "\n",
     "token = \"edf41a5fb5c5986b34e54bc3dd0200acb59fc674\"\n",
     "dadata = Dadata(token)\n",
-    "result = dadata.find_by_id(\"fias\", \"0006f280-04dd-470c-bcf9-f5d1b2e4c49a\")"
+    "result = dadata.find_by_id(\"fias\", \"27eb7c10-a234-44da-a59c-8b1f864966de\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'село Хмелёвка'"
+       "[{'value': 'Челябинская обл',\n",
+       "  'unrestricted_value': 'Челябинская обл',\n",
+       "  'data': {'postal_code': None,\n",
+       "   'region_fias_id': '27eb7c10-a234-44da-a59c-8b1f864966de',\n",
+       "   'region_kladr_id': '7400000000000',\n",
+       "   'region_with_type': 'Челябинская обл',\n",
+       "   'region_type': 'обл',\n",
+       "   'region_type_full': 'область',\n",
+       "   'region': 'Челябинская',\n",
+       "   'area_fias_id': None,\n",
+       "   'area_kladr_id': None,\n",
+       "   'area_with_type': None,\n",
+       "   'area_type': None,\n",
+       "   'area_type_full': None,\n",
+       "   'area': None,\n",
+       "   'city_fias_id': None,\n",
+       "   'city_kladr_id': None,\n",
+       "   'city_with_type': None,\n",
+       "   'city_type': None,\n",
+       "   'city_type_full': None,\n",
+       "   'city': None,\n",
+       "   'city_district_fias_id': None,\n",
+       "   'city_district_kladr_id': None,\n",
+       "   'city_district_with_type': None,\n",
+       "   'city_district_type': None,\n",
+       "   'city_district_type_full': None,\n",
+       "   'city_district': None,\n",
+       "   'settlement_fias_id': None,\n",
+       "   'settlement_kladr_id': None,\n",
+       "   'settlement_with_type': None,\n",
+       "   'settlement_type': None,\n",
+       "   'settlement_type_full': None,\n",
+       "   'settlement': None,\n",
+       "   'planning_structure_fias_id': None,\n",
+       "   'planning_structure_kladr_id': None,\n",
+       "   'planning_structure_with_type': None,\n",
+       "   'planning_structure_type': None,\n",
+       "   'planning_structure_type_full': None,\n",
+       "   'planning_structure': None,\n",
+       "   'street_fias_id': None,\n",
+       "   'street_kladr_id': None,\n",
+       "   'street_with_type': None,\n",
+       "   'street_type': None,\n",
+       "   'street_type_full': None,\n",
+       "   'street': None,\n",
+       "   'house_fias_id': None,\n",
+       "   'house_kladr_id': None,\n",
+       "   'house_type': None,\n",
+       "   'house': None,\n",
+       "   'block': None,\n",
+       "   'building_type': None,\n",
+       "   'building': None,\n",
+       "   'fias_id': '27eb7c10-a234-44da-a59c-8b1f864966de',\n",
+       "   'fias_code': '7400000000000000000',\n",
+       "   'fias_level': '1',\n",
+       "   'fias_actuality_state': '0',\n",
+       "   'kladr_id': '7400000000000',\n",
+       "   'capital_marker': '0',\n",
+       "   'okato': '75000000000',\n",
+       "   'oktmo': '75000000',\n",
+       "   'cadastral_number': None,\n",
+       "   'tax_office': '7400',\n",
+       "   'tax_office_legal': '7400',\n",
+       "   'history_values': None,\n",
+       "   'source': None,\n",
+       "   'qc': None}}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result[0][\"data\"][\"settlement_type_full\"] + \" \" + result[0][\"data\"][\"settlement\"]"
+    "result"
    ]
   },
   {
