--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -34,6 +34,7 @@
     "e_file_list = os.listdir(e_path)\n",
     "s_file_list = os.listdir(s_path)\n",
     "dm_file_list = os.listdir(dm_path + \"/\" + max(os.listdir(dm_path)))\n",
+    "\n",
     "# типы ошибок\n",
     "t_error_list = [\n",
     "    \"Ошибка валидации данных пациента\",\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +642,32 @@
       "Федеральное медико-биологическое агентство                            Ошибка «СМЭВ-timeout»      5\n",
       "Федеральное медико-биологическое агентство                 Ошибка валидации данных пациента    127\n",
       "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием     98\n",
-      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует    739\n"
+      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует    739\n",
+      "\n",
+      "Файл 23.11.csv:\n",
+      "\t\tвсего строк: 469459\n",
+      "\t\tвсего столбцов: 13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t3920\t(4.42 %)\n",
+      "\t\tSlot_uncorrected:\t\t2622\t(2.44 %)\n",
+      "\t\tBook_uncorrected:\t\t161\t(1.04 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t42052\t(42051)\n",
+      "\t\tтехнические ошибки:\t\t56724\t(55046)\n",
+      "\t\tошибки ФЭР:\t\t\t23759\t(23712)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t334049\t(333766)\n",
+      "\t\tбизнес-правила:\t\t\t10800\t(10800)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "                      Название субъекта РФ                                      final_state  value\n",
+      "Федеральное медико-биологическое агентство                              Значение не найдено      1\n",
+      "Федеральное медико-биологическое агентство                 Ошибка валидации данных пациента     40\n",
+      "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием     47\n",
+      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует    283\n"
      ]
     }
    ],
@@ -842,6 +868,407 @@
     "            .to_string(index=False)\n",
     "        )\n",
     "    # break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Файл И38_успешные_сессии_20231101.csv:\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file_name in s_file_list:\n",
+    "    df_tmp_s = pd.read_csv(s_path + \"/\" + file_name, sep=\";\")\n",
+    "    print(f\"\\nФайл {file_name}:\")\n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Файл И38_успешные_сессии_20231101.csv:\n",
+      "\t\tвсего строк: 130303\n",
+      "\t\tвсего столбцов: 9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t0 (0.0 %)\n",
+      "\t\tsession_id:\t\t0 (0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t\t0 (0.0 %)\n",
+      "\t\tsp_oid:\t\t2075 (1.59 %)\n",
+      "\t\tsp_name:\t\t0 (0.0 %)\n",
+      "\t\tpost_name:\t\t0 (0.0 %)\n",
+      "\t\tslot_ts:\t\t0 (0.0 %)\n",
+      "\t\tcreate_ts:\t\t0 (0.0 %)\n",
+      "\t\tТип записи:\t\t0 (0.0 %)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nФайл {file_name}:\")\n",
+    "print(f\"\\t\\tвсего строк: {df_tmp_s.shape[0]}\")\n",
+    "cnt_s = \"верно\" if df_tmp_s.shape[1] == 9 else \"ошибка\"\n",
+    "print(f\"\\t\\tвсего столбцов: {df_tmp_s.shape[1]} ({cnt_s})\")\n",
+    "print(\"\\tПропуски данных (всего (доля от общего числа строк)):\")\n",
+    "# пропуски данных\n",
+    "for column in df_tmp_s.columns:\n",
+    "    print(\n",
+    "        f\"\\t\\t{column}:\\t\\t{df_tmp_s[column].isnull().sum()} ({round(df_tmp_s[column].isnull().sum()*100/df_tmp_s.shape[0], 2)} %)\"\n",
+    "    )\n",
+    "# субъекты, которых нет на дашборде\n",
+    "df_nosub_s = df_tmp_s[\n",
+    "    (df_tmp_s[\"Название субъекта РФ\"] == \"Федеральное медико-биологическое агентство\")\n",
+    "    | (df_tmp_s[\"Название субъекта РФ\"] == \"г. Байконур\")\n",
+    "]\n",
+    "df_nosub_s[\"value\"] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Дата</th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>Название субъекта РФ</th>\n",
+       "      <th>sp_oid</th>\n",
+       "      <th>sp_name</th>\n",
+       "      <th>post_name</th>\n",
+       "      <th>slot_ts</th>\n",
+       "      <th>create_ts</th>\n",
+       "      <th>Тип записи</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3454575824</td>\n",
+       "      <td>Забайкальский край</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.75.7725.0.18149</td>\n",
+       "      <td>КМЦ г. Читы, Поликлиническое подразделение №2</td>\n",
+       "      <td>врач-терапевт участковый</td>\n",
+       "      <td>2023-11-10 09:36:00+03:00</td>\n",
+       "      <td>2023-11-01 02:22:25.401000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3454671369</td>\n",
+       "      <td>Ростовская область</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.61.6149.0.80632</td>\n",
+       "      <td>Консультативная-диагностическая поликлиника, Г...</td>\n",
+       "      <td>врач-гематолог</td>\n",
+       "      <td>2023-11-15 14:40:00+03:00</td>\n",
+       "      <td>2023-11-01 03:47:43.915000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3454726019</td>\n",
+       "      <td>Приморский край</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.25.2257.0.80073</td>\n",
+       "      <td>\"Владивостокская детская поликлиника №3\", ул. ...</td>\n",
+       "      <td>врач-педиатр участковый</td>\n",
+       "      <td>2023-11-03 10:00:00+03:00</td>\n",
+       "      <td>2023-11-01 04:56:16.565000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3454681503</td>\n",
+       "      <td>Приморский край</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.25.2235.0.138570</td>\n",
+       "      <td>\"Находкинская городская больница\", Дерматовене...</td>\n",
+       "      <td>врач-дерматовенеролог</td>\n",
+       "      <td>2023-11-02 02:30:00+03:00</td>\n",
+       "      <td>2023-11-01 04:02:36.074000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3454732666</td>\n",
+       "      <td>Ханты-Мансийский автономный округ - Югра</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.86.8877.0.442366</td>\n",
+       "      <td>Женская консультация, БУ \"Нижневартовская горо...</td>\n",
+       "      <td>врач-акушер-гинеколог</td>\n",
+       "      <td>2023-11-15 14:10:00+03:00</td>\n",
+       "      <td>2023-11-01 05:03:41.594000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130298</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3457413716</td>\n",
+       "      <td>Удмуртская Республика</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.18.1322.0.72545</td>\n",
+       "      <td>Женская консультация,БУЗ УР «Глазовская МБ МЗ УР»</td>\n",
+       "      <td>врач-акушер-гинеколог</td>\n",
+       "      <td>2023-11-15 09:30:00+03:00</td>\n",
+       "      <td>2023-11-01 22:48:53.302000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130299</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3457416780</td>\n",
+       "      <td>Московская область</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.50.4716.0.546807</td>\n",
+       "      <td>Поликлиническое отделение №4 (взрослое населен...</td>\n",
+       "      <td>врач-терапевт</td>\n",
+       "      <td>2023-11-10 16:12:00+03:00</td>\n",
+       "      <td>2023-11-01 22:49:47.762000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130300</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3457447514</td>\n",
+       "      <td>Белгородская область</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.31.11001.0.293035</td>\n",
+       "      <td>ОГБУЗ \"ДОКБ\" ДЕТСКАЯ ПОЛИКЛИНИКА №2</td>\n",
+       "      <td>врач-педиатр участковый</td>\n",
+       "      <td>2023-11-02 15:30:00+03:00</td>\n",
+       "      <td>2023-11-01 22:57:38.881000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130301</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3457457469</td>\n",
+       "      <td>Тульская область</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.71.7272.0.29978</td>\n",
+       "      <td>Поликлиника №2, ГУЗ \"Детская городская клиниче...</td>\n",
+       "      <td>фельдшер</td>\n",
+       "      <td>2023-11-02 10:40:00+03:00</td>\n",
+       "      <td>2023-11-01 22:59:57.854000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130302</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3457501077</td>\n",
+       "      <td>г. Санкт-Петербург</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.78.8653.0.238224</td>\n",
+       "      <td>СПб ГБУЗ \"Городская поликлиника №44\"</td>\n",
+       "      <td>врач-хирург</td>\n",
+       "      <td>2023-11-13 16:00:00+03:00</td>\n",
+       "      <td>2023-11-01 23:08:23.120000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>130243 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Дата  session_id                      Название субъекта РФ   \n",
+       "0       2023-11-01  3454575824                        Забайкальский край  \\\n",
+       "1       2023-11-01  3454671369                        Ростовская область   \n",
+       "2       2023-11-01  3454726019                           Приморский край   \n",
+       "3       2023-11-01  3454681503                           Приморский край   \n",
+       "4       2023-11-01  3454732666  Ханты-Мансийский автономный округ - Югра   \n",
+       "...            ...         ...                                       ...   \n",
+       "130298  2023-11-01  3457413716                     Удмуртская Республика   \n",
+       "130299  2023-11-01  3457416780                        Московская область   \n",
+       "130300  2023-11-01  3457447514                      Белгородская область   \n",
+       "130301  2023-11-01  3457457469                          Тульская область   \n",
+       "130302  2023-11-01  3457501077                        г. Санкт-Петербург   \n",
+       "\n",
+       "                                          sp_oid   \n",
+       "0         1.2.643.5.1.13.13.12.2.75.7725.0.18149  \\\n",
+       "1         1.2.643.5.1.13.13.12.2.61.6149.0.80632   \n",
+       "2         1.2.643.5.1.13.13.12.2.25.2257.0.80073   \n",
+       "3        1.2.643.5.1.13.13.12.2.25.2235.0.138570   \n",
+       "4        1.2.643.5.1.13.13.12.2.86.8877.0.442366   \n",
+       "...                                          ...   \n",
+       "130298    1.2.643.5.1.13.13.12.2.18.1322.0.72545   \n",
+       "130299   1.2.643.5.1.13.13.12.2.50.4716.0.546807   \n",
+       "130300  1.2.643.5.1.13.13.12.2.31.11001.0.293035   \n",
+       "130301    1.2.643.5.1.13.13.12.2.71.7272.0.29978   \n",
+       "130302   1.2.643.5.1.13.13.12.2.78.8653.0.238224   \n",
+       "\n",
+       "                                                  sp_name   \n",
+       "0           КМЦ г. Читы, Поликлиническое подразделение №2  \\\n",
+       "1       Консультативная-диагностическая поликлиника, Г...   \n",
+       "2       \"Владивостокская детская поликлиника №3\", ул. ...   \n",
+       "3       \"Находкинская городская больница\", Дерматовене...   \n",
+       "4       Женская консультация, БУ \"Нижневартовская горо...   \n",
+       "...                                                   ...   \n",
+       "130298  Женская консультация,БУЗ УР «Глазовская МБ МЗ УР»   \n",
+       "130299  Поликлиническое отделение №4 (взрослое населен...   \n",
+       "130300                ОГБУЗ \"ДОКБ\" ДЕТСКАЯ ПОЛИКЛИНИКА №2   \n",
+       "130301  Поликлиника №2, ГУЗ \"Детская городская клиниче...   \n",
+       "130302               СПб ГБУЗ \"Городская поликлиника №44\"   \n",
+       "\n",
+       "                       post_name                    slot_ts   \n",
+       "0       врач-терапевт участковый  2023-11-10 09:36:00+03:00  \\\n",
+       "1                 врач-гематолог  2023-11-15 14:40:00+03:00   \n",
+       "2        врач-педиатр участковый  2023-11-03 10:00:00+03:00   \n",
+       "3          врач-дерматовенеролог  2023-11-02 02:30:00+03:00   \n",
+       "4          врач-акушер-гинеколог  2023-11-15 14:10:00+03:00   \n",
+       "...                          ...                        ...   \n",
+       "130298     врач-акушер-гинеколог  2023-11-15 09:30:00+03:00   \n",
+       "130299             врач-терапевт  2023-11-10 16:12:00+03:00   \n",
+       "130300   врач-педиатр участковый  2023-11-02 15:30:00+03:00   \n",
+       "130301                  фельдшер  2023-11-02 10:40:00+03:00   \n",
+       "130302               врач-хирург  2023-11-13 16:00:00+03:00   \n",
+       "\n",
+       "                               create_ts  Тип записи  \n",
+       "0       2023-11-01 02:22:25.401000+03:00           3  \n",
+       "1       2023-11-01 03:47:43.915000+03:00           3  \n",
+       "2       2023-11-01 04:56:16.565000+03:00           3  \n",
+       "3       2023-11-01 04:02:36.074000+03:00           3  \n",
+       "4       2023-11-01 05:03:41.594000+03:00           3  \n",
+       "...                                  ...         ...  \n",
+       "130298  2023-11-01 22:48:53.302000+03:00           3  \n",
+       "130299  2023-11-01 22:49:47.762000+03:00           3  \n",
+       "130300  2023-11-01 22:57:38.881000+03:00           3  \n",
+       "130301  2023-11-01 22:59:57.854000+03:00           3  \n",
+       "130302  2023-11-01 23:08:23.120000+03:00           3  \n",
+       "\n",
+       "[130243 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp_s[df_tmp_s[\"Тип записи\"] == 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Дата</th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>Название субъекта РФ</th>\n",
+       "      <th>sp_oid</th>\n",
+       "      <th>sp_name</th>\n",
+       "      <th>post_name</th>\n",
+       "      <th>slot_ts</th>\n",
+       "      <th>create_ts</th>\n",
+       "      <th>Тип записи</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8052</th>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>3455897937</td>\n",
+       "      <td>Федеральное медико-биологическое агентство</td>\n",
+       "      <td>1.2.643.5.1.13.13.12.2.69.7179.0.14349</td>\n",
+       "      <td>Детская поликлиника,ФБУЗ ЦМСЧ № 141 ФМБА России</td>\n",
+       "      <td>врач-педиатр</td>\n",
+       "      <td>2023-11-07 15:00:00+03:00</td>\n",
+       "      <td>2023-11-01 13:33:25.233000+03:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Дата  session_id                        Название субъекта РФ   \n",
+       "8052  2023-11-01  3455897937  Федеральное медико-биологическое агентство  \\\n",
+       "\n",
+       "                                      sp_oid   \n",
+       "8052  1.2.643.5.1.13.13.12.2.69.7179.0.14349  \\\n",
+       "\n",
+       "                                              sp_name     post_name   \n",
+       "8052  Детская поликлиника,ФБУЗ ЦМСЧ № 141 ФМБА России  врач-педиатр  \\\n",
+       "\n",
+       "                        slot_ts                         create_ts  Тип записи   \n",
+       "8052  2023-11-07 15:00:00+03:00  2023-11-01 13:33:25.233000+03:00           3  \\\n",
+       "\n",
+       "      value  \n",
+       "8052      1  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nosub_s"
    ]
   }
  ],
