--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -738,6 +738,49 @@
       "\t\tчерновики:\t\t\t182924\t(182924)\n",
       "\t\tбизнес-правила:\t\t\t4590\t(4590)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл 27.11.csv:\n",
+      "\t\tвсего строк:\t\t\t642884\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t4700\t(3.98 %)\n",
+      "\t\tSlot_uncorrected:\t\t3189\t(2.16 %)\n",
+      "\t\tBook_uncorrected:\t\t183\t(0.7 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t54552\t(54552)\n",
+      "\t\tтехнические ошибки:\t\t81098\t(77819)\n",
+      "\t\tошибки ФЭР:\t\t\t30592\t(30592)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t457114\t(457113)\n",
+      "\t\tбизнес-правила:\t\t\t17240\t(17240)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "                      Название субъекта РФ       final_state  value\n",
+      "Федеральное медико-биологическое агентство Ошибка отсутсвует      1\n",
+      "\n",
+      "Файл 28.11.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t548056\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t4064\t(4.03 %)\n",
+      "\t\tSlot_uncorrected:\t\t2708\t(2.23 %)\n",
+      "\t\tBook_uncorrected:\t\t155\t(0.8 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t49050\t(49050)\n",
+      "\t\tтехнические ошибки:\t\t65552\t(63621)\n",
+      "\t\tошибки ФЭР:\t\t\t42757\t(42757)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t375156\t(375156)\n",
+      "\t\tбизнес-правила:\t\t\t13318\t(13318)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n"
      ]
     }
@@ -944,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1423,6 +1466,42 @@
       "\t\tТип записи:\t\t0\t(0.0 %)\n",
       "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
       "\t\t68785 (68785)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231127.csv:\n",
+      "\t\tвсего строк:\t\t187886\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t2531\t(1.35 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t187795 (187795)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231128.csv:\n",
+      "\t\tвсего строк:\t\t151903\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t2209\t(1.45 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t151824 (151824)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n"
      ]
