--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -33,7 +33,7 @@
     "dm_path = \"C:/work/new_bot/new/dm\"\n",
     "e_file_list = os.listdir(e_path)\n",
     "s_file_list = os.listdir(s_path)\n",
-    "dm_file_list = os.listdir(dm_path + \"/\" + max(os.listdir(dm_path)))\n",
+    "dm_file_last = os.listdir(dm_path + \"/\" + max(os.listdir(dm_path)))\n",
     "\n",
     "# типы ошибок\n",
     "t_error_list = [\n",
@@ -111,8 +111,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ошибки"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -781,6 +788,27 @@
       "\t\tчерновики:\t\t\t375156\t(375156)\n",
       "\t\tбизнес-правила:\t\t\t13318\t(13318)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл 29.11.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t549727\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t2\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t4185\t(3.81 %)\n",
+      "\t\tSlot_uncorrected:\t\t2868\t(2.35 %)\n",
+      "\t\tBook_uncorrected:\t\t169\t(0.73 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t49000\t(49000)\n",
+      "\t\tтехнические ошибки:\t\t93873\t(92639)\n",
+      "\t\tошибки ФЭР:\t\t\t29940\t(29940)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t361187\t(361187)\n",
+      "\t\tбизнес-правила:\t\t\t13448\t(13448)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n"
      ]
     }
@@ -986,8 +1014,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Успехи"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1503,6 +1538,24 @@
       "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
       "\t\t151824 (151824)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231129.csv:\n",
+      "\t\tвсего строк:\t\t143246\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t2326\t(1.62 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t143187 (143187)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n"
      ]
     }
@@ -1568,6 +1621,133 @@
     "            .to_string(index=False)\n",
     "        )\n",
     "    # break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Витрины"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Файл: ... 2023-11-29/Ежедневные_данные_по_сессиям.xlsx\n",
+      "\t\tвсего строк:\t\t18680\n",
+      "\t\tвсего столбцов:\t\t11 (верно)\n",
+      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-11-29\n",
+      "\t\tназвание шага 4:\t'Шаг 4. Запись. Уникальные сессии' - верное\n",
+      "\tНазвания шагов, используемые в файле:\n",
+      "\t\t Шаг 1. Идентификация пациента в регионе. Уникальные сессии\n",
+      "\t\t Шаг 2. Выбор специальности. Уникальные сессии\n",
+      "\t\t Шаг 3. Выбор врача и времени. Уникальные сессии\n",
+      "\t\t Шаг 4. Запись. Уникальные сессии\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tКод региона:\t\t0\t(0.0 %)\n",
+      "\t\tРегион:\t\t\t0\t(0.0 %)\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tШаг:\t\t\t0\t(0.0 %)\n",
+      "\t\tВсего:\t\t\t0\t(0.0 %)\n",
+      "\t\tУспешно:\t\t0\t(0.0 %)\n",
+      "\t\tОшибки ЕПГУ:\t\t0\t(0.0 %)\n",
+      "\t\tТех ошибки:\t\t0\t(0.0 %)\n",
+      "\t\tОрг ошибки:\t\t0\t(0.0 %)\n",
+      "\t\tПОДД:\t\t\t0\t(0.0 %)\n",
+      "\t\tБрошенные:\t\t0\t(0.0 %)\n",
+      "\tРезультаты записи на приём с использованием витрин ЕПГУ:\n",
+      "\t\tуспешные записи:\t66074\n",
+      "\t\tтехнические ошибки:\t3511\n",
+      "\t\tорганизационные ошибки:\t40350\n",
+      "\t\tошибки ФЭР:\t\t55\n",
+      "\t\tчерновики:\t\t222808\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_dm = pd.read_excel(\n",
+    "    dm_path + \"/\" + max(os.listdir(dm_path)) + \"/\" + dm_file_last[0],\n",
+    "    sheet_name=\"Сессии по датам\",\n",
+    "    index_col=None,\n",
+    ")\n",
+    "print(\"Файл: ...\", max(os.listdir(dm_path)) + \"/\" + dm_file_last[0])\n",
+    "print(f\"\\t\\tвсего строк:\\t\\t{df_dm.shape[0]}\")\n",
+    "cnt_dm = \"верно\" if df_dm.shape[1] == 11 else \"ошибка\"\n",
+    "print(f\"\\t\\tвсего столбцов:\\t\\t{df_dm.shape[1]} ({cnt_dm})\")\n",
+    "print(\n",
+    "    f'\\t\\tдиапазон дат: \\t\\t{str(df_dm[\"Дата\"].min())[:10]} - {str(df_dm[\"Дата\"].max())[:10]}'\n",
+    ")\n",
+    "if \"Шаг 4. Запись. Уникальные сессии\" not in df_dm[\"Шаг\"].unique():\n",
+    "    print(\"\\t\\tназвание шага 4:\\tотличается от используемого для расчётов\")\n",
+    "else:\n",
+    "    print(\"\\t\\tназвание шага 4:\\t'Шаг 4. Запись. Уникальные сессии' - верное\")\n",
+    "# названи шагов из файла\n",
+    "step_name_list = df_dm[\"Шаг\"].unique()\n",
+    "print(\"\\tНазвания шагов, используемые в файле:\")\n",
+    "for step_name in step_name_list:\n",
+    "    print(\"\\t\\t\", step_name)\n",
+    "# пропуски данных\n",
+    "print(\"\\tПропуски данных (всего (доля от общего числа строк)):\")\n",
+    "missing_dm_dict = {}\n",
+    "for column in df_dm.columns:\n",
+    "    missing_dm_dict[column] = [\n",
+    "        df_dm[column].isnull().sum(),\n",
+    "        round(df_dm[column].isnull().sum() * 100 / df_dm.shape[0], 2),\n",
+    "    ]\n",
+    "print(\n",
+    "    f'\\t\\tКод региона:\\t\\t{missing_dm_dict[\"Код региона\"][0]}\\t({missing_dm_dict[\"Код региона\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tРегион:\\t\\t\\t{missing_dm_dict[\"Регион\"][0]}\\t({missing_dm_dict[\"Регион\"][1]} %)'\n",
+    ")\n",
+    "print(f'\\t\\tДата:\\t\\t\\t{missing_dm_dict[\"Дата\"][0]}\\t({missing_dm_dict[\"Дата\"][1]} %)')\n",
+    "print(f'\\t\\tШаг:\\t\\t\\t{missing_dm_dict[\"Шаг\"][0]}\\t({missing_dm_dict[\"Шаг\"][1]} %)')\n",
+    "print(\n",
+    "    f'\\t\\tВсего:\\t\\t\\t{missing_dm_dict[\"Всего\"][0]}\\t({missing_dm_dict[\"Всего\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tУспешно:\\t\\t{missing_dm_dict[\"Успешно\"][0]}\\t({missing_dm_dict[\"Успешно\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tОшибки ЕПГУ:\\t\\t{missing_dm_dict[\"Ошибки ЕПГУ\"][0]}\\t({missing_dm_dict[\"Ошибки ЕПГУ\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tТех ошибки:\\t\\t{missing_dm_dict[\"Тех ошибки\"][0]}\\t({missing_dm_dict[\"Тех ошибки\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tОрг ошибки:\\t\\t{missing_dm_dict[\"Орг ошибки\"][0]}\\t({missing_dm_dict[\"Орг ошибки\"][1]} %)'\n",
+    ")\n",
+    "print(f'\\t\\tПОДД:\\t\\t\\t{missing_dm_dict[\"ПОДД\"][0]}\\t({missing_dm_dict[\"ПОДД\"][1]} %)')\n",
+    "print(\n",
+    "    f'\\t\\tБрошенные:\\t\\t{missing_dm_dict[\"Брошенные\"][0]}\\t({missing_dm_dict[\"Брошенные\"][1]} %)'\n",
+    ")\n",
+    "print(\"\\tРезультаты записи на приём с использованием витрин ЕПГУ:\")\n",
+    "# количество успешных записей\n",
+    "dm_s = df_dm[\n",
+    "    (df_dm[\"Дата\"] == df_dm[\"Дата\"].max()) & (df_dm[\"Шаг\"] == step_name_list[3])\n",
+    "][\"Успешно\"].sum()\n",
+    "# количество технических ошибок\n",
+    "dm_e_t = (\n",
+    "    df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"Тех ошибки\"].sum()\n",
+    "    + df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"ПОДД\"].sum()\n",
+    ")\n",
+    "# количество организационных ошибок\n",
+    "dm_e_o = df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"Орг ошибки\"].sum()\n",
+    "# количество ошибок ФЭР\n",
+    "dm_e_r = df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"Ошибки ЕПГУ\"].sum()\n",
+    "# черновики\n",
+    "dm_e_d = df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"Брошенные\"].sum()\n",
+    "print(f\"\\t\\tуспешные записи:\\t{dm_s}\")\n",
+    "print(f\"\\t\\tтехнические ошибки:\\t{dm_e_t}\")\n",
+    "print(f\"\\t\\tорганизационные ошибки:\\t{dm_e_o}\")\n",
+    "print(f\"\\t\\tошибки ФЭР:\\t\\t{dm_e_r}\")\n",
+    "print(f\"\\t\\tчерновики:\\t\\t{dm_e_d}\")"
    ]
   }
  ],
