--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,32 @@
       "\t\tчерновики:\t\t\t361187\t(361187)\n",
       "\t\tбизнес-правила:\t\t\t13448\t(13448)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
-      "\t\tотсутствуют\n"
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл 30.11.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t491845\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t4458\t(4.88 %)\n",
+      "\t\tSlot_uncorrected:\t\t2878\t(2.37 %)\n",
+      "\t\tBook_uncorrected:\t\t146\t(0.87 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t47724\t(47724)\n",
+      "\t\tтехнические ошибки:\t\t54289\t(53133)\n",
+      "\t\tошибки ФЭР:\t\t\t23932\t(23926)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t351567\t(351381)\n",
+      "\t\tбизнес-правила:\t\t\t12210\t(12210)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "                      Название субъекта РФ                                      final_state  value\n",
+      "Федеральное медико-биологическое агентство                            Ошибка «СМЭВ-timeout»      1\n",
+      "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием      5\n",
+      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует    186\n",
+      "                               г. Байконур                         Сервис МИС приостановлен      1\n"
      ]
     }
    ],
@@ -1022,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1556,6 +1581,24 @@
       "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
       "\t\t143187 (143187)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231130.csv:\n",
+      "\t\tвсего строк:\t\t141012\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t2098\t(1.49 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t140946 (140946)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n"
      ]
     }
@@ -1632,17 +1675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Файл: ... 2023-11-29/Ежедневные_данные_по_сессиям.xlsx\n",
-      "\t\tвсего строк:\t\t18680\n",
+      "Файл: ... 2023-11-30/Ежедневные_данные_по_сессиям.xlsx\n",
+      "\t\tвсего строк:\t\t18800\n",
       "\t\tвсего столбцов:\t\t11 (верно)\n",
-      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-11-29\n",
+      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-11-30\n",
       "\t\tназвание шага 4:\t'Шаг 4. Запись. Уникальные сессии' - верное\n",
       "\tНазвания шагов, используемые в файле:\n",
       "\t\t Шаг 1. Идентификация пациента в регионе. Уникальные сессии\n",
@@ -1662,11 +1705,11 @@
       "\t\tПОДД:\t\t\t0\t(0.0 %)\n",
       "\t\tБрошенные:\t\t0\t(0.0 %)\n",
       "\tРезультаты записи на приём с использованием витрин ЕПГУ:\n",
-      "\t\tуспешные записи:\t66074\n",
-      "\t\tтехнические ошибки:\t3511\n",
-      "\t\tорганизационные ошибки:\t40350\n",
-      "\t\tошибки ФЭР:\t\t55\n",
-      "\t\tчерновики:\t\t222808\n"
+      "\t\tуспешные записи:\t58025\n",
+      "\t\tтехнические ошибки:\t8903\n",
+      "\t\tорганизационные ошибки:\t34758\n",
+      "\t\tошибки ФЭР:\t\t40\n",
+      "\t\tчерновики:\t\t195257\n"
      ]
     }
    ],
