В SQL добавлен фильтр по прохождению файлами валидации

--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -340,6 +340,27 @@
       "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
       "\t\tчерновики:\t\t\t183506\t(183506)\n",
       "\t\tбизнес-правила:\t\t\t5529\t(5529)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл 11.12.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t648676\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t4960\t(5.07 %)\n",
+      "\t\tSlot_uncorrected:\t\t3369\t(2.14 %)\n",
+      "\t\tBook_uncorrected:\t\t323\t(1.4 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t46508\t(46508)\n",
+      "\t\tтехнические ошибки:\t\t147165\t(144219)\n",
+      "\t\tошибки ФЭР:\t\t\t28710\t(28710)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t408138\t(408138)\n",
+      "\t\tбизнес-правила:\t\t\t15837\t(15837)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n"
      ]
@@ -742,7 +763,25 @@
       "\t\t69144 (69143)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "                      Название субъекта РФ  session_id\n",
-      "Федеральное медико-биологическое агентство           1\n"
+      "Федеральное медико-биологическое агентство           1\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231211.csv:\n",
+      "\t\tвсего строк:\t\t168851\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t2935\t(1.74 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t1\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t168748 (168748)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n"
      ]
     }
    ],
@@ -818,24 +857,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Файл: ... 2023-12-10/Ежедневные_данные_по_сессиям.xlsx\n",
-      "\t\tвсего строк:\t\t20060\n",
-      "\t\tвсего столбцов:\t\t12 (ошибка)\n",
-      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-12-10\n",
+      "Файл: ... 2023-12-11/Ежедневные_данные_по_сессиям.xlsx\n",
+      "\t\tвсего строк:\t\t20188\n",
+      "\t\tвсего столбцов:\t\t12 (верно)\n",
+      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-12-11\n",
       "\t\tназвание шага 4:\t'Шаг 4. Запись. Уникальные сессии' - верное\n",
       "\tНазвания шагов, используемые в файле:\n",
       "\t\t Шаг 1. Идентификация пациента в регионе. Уникальные сессии\n",
       "\t\t Шаг 2. Выбор специальности. Уникальные сессии\n",
       "\t\t Шаг 3. Выбор врача и времени. Уникальные сессии\n",
       "\t\t Шаг 4. Запись. Уникальные сессии\n",
-      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\tПропуски данных за весь период (всего (доля от общего числа строк)):\n",
       "\t\tКод региона:\t\t0\t(0.0 %)\n",
       "\t\tРегион:\t\t\t0\t(0.0 %)\n",
       "\t\tДата:\t\t\t0\t(0.0 %)\n",
@@ -847,12 +886,15 @@
       "\t\tОрг ошибки:\t\t0\t(0.0 %)\n",
       "\t\tПОДД:\t\t\t0\t(0.0 %)\n",
       "\t\tБрошенные:\t\t0\t(0.0 %)\n",
-      "\tРезультаты записи на приём с использованием витрин ЕПГУ:\n",
-      "\t\tуспешные записи:\t36865\n",
-      "\t\tтехнические ошибки:\t1761\n",
-      "\t\tорганизационные ошибки:\t17196\n",
-      "\t\tошибки ФЭР:\t\t10\n",
-      "\t\tчерновики:\t\t118088\n"
+      "\t\tБизнес-правила:\t\t18308\t(90.69 %)\n",
+      "\tРезультаты записи на приём с использованием витрин ЕПГУ на 2023-12-11\n",
+      "\t(бизнес-правила игнорируются):\n",
+      "\t\tуспешные записи:\t66405\n",
+      "\t\tтехнические ошибки:\t7504\n",
+      "\t\tорганизационные ошибки:\t30371\n",
+      "\t\tошибки ФЭР:\t\t54\n",
+      "\t\tчерновики:\t\t205808\n",
+      "\t\tбизнес-правила:\t\t5261\n"
      ]
     }
    ],
@@ -864,7 +906,7 @@
     ")\n",
     "print(\"Файл: ...\", max(os.listdir(dm_path)) + \"/\" + dm_file_last[0])\n",
     "print(f\"\\t\\tвсего строк:\\t\\t{df_dm.shape[0]}\")\n",
-    "cnt_dm = \"верно\" if df_dm.shape[1] == 11 else \"ошибка\"\n",
+    "cnt_dm = \"верно\" if df_dm.shape[1] == 12 else \"ошибка\"\n",
     "print(f\"\\t\\tвсего столбцов:\\t\\t{df_dm.shape[1]} ({cnt_dm})\")\n",
     "print(\n",
     "    f'\\t\\tдиапазон дат: \\t\\t{str(df_dm[\"Дата\"].min())[:10]} - {str(df_dm[\"Дата\"].max())[:10]}'\n",
@@ -879,7 +921,7 @@
     "for step_name in step_name_list:\n",
     "    print(\"\\t\\t\", step_name)\n",
     "# пропуски данных\n",
-    "print(\"\\tПропуски данных (всего (доля от общего числа строк)):\")\n",
+    "print(\"\\tПропуски данных за весь период (всего (доля от общего числа строк)):\")\n",
     "missing_dm_dict = {}\n",
     "for column in df_dm.columns:\n",
     "    missing_dm_dict[column] = [\n",
@@ -913,7 +955,11 @@
     "print(\n",
     "    f'\\t\\tБрошенные:\\t\\t{missing_dm_dict[\"Брошенные\"][0]}\\t({missing_dm_dict[\"Брошенные\"][1]} %)'\n",
     ")\n",
-    "print(\"\\tРезультаты записи на приём с использованием витрин ЕПГУ:\")\n",
+    "print(\n",
+    "    f'\\t\\tБизнес-правила:\\t\\t{missing_dm_dict[\"Бизнес-правила\"][0]}\\t({missing_dm_dict[\"Бизнес-правила\"][1]} %)'\n",
+    ")\n",
+    "print(f'\\tРезультаты записи на приём с использованием витрин ЕПГУ на {str(df_dm[\"Дата\"].max())[:10]}')\n",
+    "print('\\t(бизнес-правила игнорируются):')\n",
     "# количество успешных записей\n",
     "dm_s = df_dm[\n",
     "    (df_dm[\"Дата\"] == df_dm[\"Дата\"].max()) & (df_dm[\"Шаг\"] == step_name_list[3])\n",
@@ -929,11 +975,14 @@
     "dm_e_r = df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"Ошибки ЕПГУ\"].sum()\n",
     "# черновики\n",
     "dm_e_d = df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"Брошенные\"].sum()\n",
+    "# бизнес-правила\n",
+    "dm_e_b = int(df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()][\"Бизнес-правила\"].sum())\n",
     "print(f\"\\t\\tуспешные записи:\\t{dm_s}\")\n",
     "print(f\"\\t\\tтехнические ошибки:\\t{dm_e_t}\")\n",
     "print(f\"\\t\\tорганизационные ошибки:\\t{dm_e_o}\")\n",
     "print(f\"\\t\\tошибки ФЭР:\\t\\t{dm_e_r}\")\n",
-    "print(f\"\\t\\tчерновики:\\t\\t{dm_e_d}\")"
+    "print(f\"\\t\\tчерновики:\\t\\t{dm_e_d}\")\n",
+    "print(f\"\\t\\tбизнес-правила:\\t\\t{dm_e_b}\")"
    ]
   }
  ],
